# PA2-SEMESTRAL_WORK

./: CMakeLists.txt  CPos.cpp  CPos.h  CSpreadsheet.cpp  CSpreadsheet.h  Parser.cpp  Parser.h  README.md  Sell.cpp  Sell.h  SinglePartOfExpression.cpp  SinglePartOfExpression.h  StackExpressionvalue.h  file  main.cpp
